--- a/_posts/2017-08-26-music.markdown
+++ b/_posts/2017-08-26-music.markdown
@@ -1,11 +1,12 @@
 ---
 layout:     post
-title:      "Hello 2015"
+title:      "Twins:眼红红"
 subtitle:   " \"眼红红\""
 date:       2017-08-26 16:58:03 
 author:     "Fancybot"
 header-img: "img/post_img/twins.jpg"
 catalog: true
+hdml_support: true 
 tags:
     - Twins
     - 娱乐世界
@@ -20,58 +21,74 @@ tags:
 
 [跳过图片](#build) 
 
-！[twins](/img/post_img/twins.jpg)
+![twins](/img/post_img/twins.jpg)
 
 ---
 
 
-！[twins](/img/post_img/twins2.jpg)
+![twins](/img/post_img/twins2.jpg)
 
 ---
 
 
 <p id = "build"></p>
 ---
-<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=2&id=28977260&auto=1&height=66"></iframe>
 
+
+[跳过歌词](#build2) 
 ## 眼红红
-### Twins
+  Twins
 
-仍然怀念他　一起去学结他
-一对黑眼圈　回望中三暑假
-独白：以后我都冇掂过个结他，至于暑假...
-为求发泄出一切　流眼泪亦无它
-人人谈论我　将我当做笑话
-因我失去他　宁愿天天请假
-独白：不过，点都好过隔离班个同学
-告假之后就冇返过来
-但能够接触恋爱
-亦已到些牵挂
-我最初脸红　现在双眼通红
-再幼稚还是觉得恋爱如梦
-我再不面红　但愿不再冲动
-爱到入城大也分开　预计之中
-然而我愈说愈激动
-这失恋感觉怎形容
-初恋难忘　初次心痛
-拿着旧日合照
-想起我才撒他娇
-我得到的礼物都不算少
-仍然无电话　等于告别了吗
-初次感觉到　期待多么可怕
-独白：原来好恨得到一样野系咁辛苦
-独白：不过有得恨总好过冇得恨
-但能够与他好过
-别要动气责怪他
-我最初脸红　现在双眼通红
-再幼稚还是觉得恋爱如梦
-我再不面红　但愿不再冲动
-爱到入城大也分开　预计之中
-然而我愈说愈激动
-这失恋感觉怎形容
-初恋难忘　初次心痛
-拿着旧日合照
-想起我才撒他娇
-也许今天以为哭得太少
-但始终有日想起也都　可笑 
-有一天会为这首插曲　微笑
+仍然怀念他　一起去学结他  
+一对黑眼圈　回望中三暑假  
+独白：以后我都冇掂过个结他，至于暑假...  
+为求发泄出一切　流眼泪亦无它  
+人人谈论我　将我当做笑话  
+因我失去他　宁愿天天请假  
+独白：不过，点都好过隔离班个同学  
+告假之后就冇返过来  
+但能够接触恋爱  
+亦已到些牵挂  
+我最初脸红　现在双眼通红  
+再幼稚还是觉得恋爱如梦  
+我再不面红　但愿不再冲动  
+爱到入城大也分开　预计之中  
+然而我愈说愈激动  
+这失恋感觉怎形容  
+初恋难忘　初次心痛  
+拿着旧日合照  
+想起我才撒他娇  
+我得到的礼物都不算少  
+仍然无电话　等于告别了吗  
+初次感觉到　期待多么可怕  
+独白：原来好恨得到一样野系咁辛苦  
+独白：不过有得恨总好过冇得恨  
+但能够与他好过  
+别要动气责怪他  
+我最初脸红　现在双眼通红  
+再幼稚还是觉得恋爱如梦  
+我再不面红　但愿不再冲动  
+爱到入城大也分开　预计之中  
+然而我愈说愈激动  
+这失恋感觉怎形容  
+初恋难忘　初次心痛  
+拿着旧日合照  
+想起我才撒他娇  
+也许今天以为哭得太少  
+但始终有日想起也都　可笑   
+有一天会为这首插曲　微笑  
+
+
+---
+
+<p id = "build2"></p>
+
+<iframe src="//music.163.com/outchain/player?type=2&id=28977260&auto=1&height=66" style="
+    frameborder:no;
+    border:0;
+    marginheight:0;
+    width:330;
+    height:86;
+"></iframe>
+
+---
